// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`AdvertisingBlock testing AdvertisingBlock render array 1`] = `
=======
exports[`Youtube Renders correct defaultProps 1`] = `
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
<styled.div>
  <styled.div>
    <styled.div>
      <styled.h2>
        Добавьте к вашему заказу
      </styled.h2>
    </styled.div>
    <styled.div>
      <styled.div
        key="0"
      >
        <styled.div
          style={
            Object {
              "backgroundImage": "url(good-1.png)",
            }
          }
        />
        <styled.div>
<<<<<<< HEAD
          test_1
        </styled.div>
        <styled.div>
          test_rubles
           руб.
        </styled.div>
      </styled.div>
      <styled.div
        key="1"
=======
          test_name
        </styled.div>
        <styled.div>
          test_price
           руб.
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`Youtube Renders correct defaultProps 2`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.h2>
        Добавьте к вашему заказу
      </styled.h2>
    </styled.div>
    <styled.div>
      <styled.div
        key="0"
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
      >
        <styled.div
          style={
            Object {
<<<<<<< HEAD
              "backgroundImage": "url(good-2.png)",
=======
              "backgroundImage": "url(good-1.png)",
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
            }
          }
        />
        <styled.div>
<<<<<<< HEAD
          test_2
        </styled.div>
        <styled.div>
          test_rubles
=======
          test_name_1
        </styled.div>
        <styled.div>
          1234
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
           руб.
        </styled.div>
      </styled.div>
      <styled.div
<<<<<<< HEAD
        key="2"
=======
        key="1"
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
      >
        <styled.div
          style={
            Object {
<<<<<<< HEAD
              "backgroundImage": "url(good-3.png)",
=======
              "backgroundImage": "url(good-2.png)",
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
            }
          }
        />
        <styled.div>
<<<<<<< HEAD
          test_3
        </styled.div>
        <styled.div>
          test_rubles
=======
          test_name_2
        </styled.div>
        <styled.div>
          1234
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
           руб.
        </styled.div>
      </styled.div>
      <styled.div
<<<<<<< HEAD
        key="3"
=======
        key="2"
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
      >
        <styled.div
          style={
            Object {
<<<<<<< HEAD
              "backgroundImage": "url(good-4.png)",
=======
              "backgroundImage": "url(good-3.png)",
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
            }
          }
        />
        <styled.div>
<<<<<<< HEAD
          test_4
        </styled.div>
        <styled.div>
          test_rubles
=======
          test_name_3
        </styled.div>
        <styled.div>
          1234
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
           руб.
        </styled.div>
      </styled.div>
    </styled.div>
  </styled.div>
</styled.div>
`;
<<<<<<< HEAD

exports[`AdvertisingBlock testing AdvertisingBlock render defaultProps 1`] = `
<styled.div>
  <styled.div>
    <styled.div>
      <styled.h2>
        Добавьте к вашему заказу
      </styled.h2>
    </styled.div>
    <styled.div />
  </styled.div>
</styled.div>
`;
=======
>>>>>>> 0dfab63929422d2dcd1597a009f7b610c363c12a
